# yolov5_package

./: .pylintrc  Dockerfile  README.md  demo.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: main_pipeline.yml
tests/: test_yolov5_hse.py
yolov5_hse/: demo.py  pyproject.toml  requirements.txt  utils.py  yolov5_tflite_inference.py
yolov5_hse/yolov5_hse/: __init__.py  __main__.py
yolov5_stream_demo/: __init__.py  web_demo.py
