[tool.poetry]
name = "yolov5_hse"
version = "0.1.0"
description = ""
authors = ["Home Berezkin <berezkinalexey@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.scripts]

yolov5_hse = 'yolov5_hse:main'